Keep animations running going to/from fullscreen.

LazyReattachIfAttached() nukes the computed styles synchronously so that
we are not able to keep animations alive for the next lifecycle update.
Add a bit on Node to say that we need a forced layout tree reattach and
trigger the re-attach from style recalc instead.

Bug: 900162
Change-Id: I22f51f5e091932fc8a63213af88903c7866abbb4
Reviewed-on: https://chromium-review.googlesource.com/c/1333809
Reviewed-by: Robert Flack <flackr@chromium.org>
Commit-Queue: Rune Lillesveen <futhark@chromium.org>
Cr-Commit-Position: refs/heads/master@{#608530}
Former-commit-id: 71f16b992e49df7d439340908caffbee4ef068d6