third_party/blink/renderer/core/dom/document.cc
@@ -2159,6 +2159,7 @@ static void AssertLayoutTreeUpdated(Node& root) {
     DCHECK(!node.ChildNeedsDistributionRecalc());
     DCHECK(!node.NeedsStyleInvalidation());
     DCHECK(!node.ChildNeedsStyleInvalidation());
+    DCHECK(!node.GetForceReattachLayoutTree());
     // Make sure there is no node which has a LayoutObject, but doesn't have a
     // parent in a flat tree. If there is such a node, we forgot to detach the
     // node. DocumentNode is only an exception.
